<?xml version="1.0"?>
<package format="2">
  <name>roscomm_msgs</name>
  <version>0.0.0</version>
  <description>The roscomm_msgs package</description>

  <maintainer email="people7874@gmail.com">yjoung</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
